force-app/main/default/objects/Invoice__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>契約</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>請求</relationshipLabel>
    <relationshipName>InvoiceContacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>