force-app/main/default/objects/Invoice__c/fields/InitUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InitUnitPrice__c</fullName>
    <label>初期単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>