force-app/main/default/objects/Invoice__c/fields/IssueUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>IssueUnitPrice__c</fullName>
    <label>発行単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>