force-app/main/default/objects/Invoice__c/fields/OptionIssueUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OptionIssueUnitPrice__c</fullName>
    <label>オプション発行単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>