force-app/main/default/objects/Invoice__c/fields/OptionPageCount__c.field-meta.xml
<CustomField>
    <fullName>OptionPageCount__c</fullName>
    <label>オプションページ数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>