force-app/main/default/objects/Invoice__c/fields/OptionPageUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OptionPageUnitPrice__c</fullName>
    <label>オプションページ単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>