force-app/main/default/objects/Invoice__c/fields/PageUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>PageUnitPrice__c</fullName>
    <label>ページ単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>